// proto/todo.proto
syntax = "proto3";

package todo;

option go_package = "./proto;todo";

service TodoService {
  rpc CreateTask(CreateTaskRequest) returns (Task);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc ListTasks(Empty) returns (stream Task);
  rpc UpdateTask(UpdateTaskRequest) returns (Task);
  rpc DeleteTask(DeleteTaskRequest) returns (Empty);
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message GetTaskRequest {
  string id = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message DeleteTaskRequest {
  string id = 1;
}

message TaskList {
  repeated Task tasks = 1;
}

message Empty {}
